@@ -41,7 +41,7 @@
     <File name="GnomeUI.cs" subtype="Code" buildaction="Compile" />
     <File name="Main.cs" subtype="Code" buildaction="Compile" />
     <File name="MainWindow.cs" subtype="Code" buildaction="Compile" />
-    <File name="NewEngineDruid.cs" subtype="Code" buildaction="Compile" />
+    <File name="EngineDruid.cs" subtype="Code" buildaction="Compile" />
     <File name="NotImplementedMessageDialog.cs" subtype="Code" buildaction="Compile" />
     <File name="Notebook.cs" subtype="Code" buildaction="Compile" />
     <File name="SplashScreenWindow.cs" subtype="Code" buildaction="Compile" />
